Fix negative z-indexes vanishing behind body element. #94
Work in progress.

- Chrome does not correctly render the integration test images.
- Integration test with SlimerJS fails

--- a/test/fixtures/test.css
+++ b/test/fixtures/test.css
@@ -7,6 +7,8 @@
 .bgimage:active {
     background-image: url("rednblue.png");
     background-size: 100%;
+    position: relative;
+    z-index: -1;
 }
 .webfont {
     font-family: 'RaphaelIcons';
